--- a/package.json
+++ b/package.json
@@ -21,15 +21,19 @@
   },
   "homepage": "https://github.com/ThreeWorrrlds/express-mesto-gha-my#readme",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "celebrate": "^15.0.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "helmet": "^6.0.1",
-    "mongoose": "^6.8.0",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
+    "mongoose": "^6.8.2",
     "validator": "^13.7.0"
   },
   "devDependencies": {
     "depcheck": "^1.4.3",
-    "eslint": "^8.30.0",
+    "eslint": "^8.31.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.26.0",
     "nodemon": "^2.0.20"
